# 21cmEMU

./: .cookiecutter.json  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  ENV.yml  LICENSE  README.md  README.rst  check.npz  noxfile.py  pyproject.toml  setup.py
.github/workflows/: auto_merge.yml  blank.yml  check-build.yml  constraints.txt  deploy.yaml  release-draft.yml  release.yml  test_suite.yml  tests.yml
docs/: README.rst  conf.py  index.md  index.rst  reference.md  requirements.txt  tutorials.rst  usage.md  usage.rst
docs/reference/: index.rst  py21cmemu.rst
docs/reference/_autosummary/: py21cmemu.emulator.rst  py21cmemu.inputs.rst  py21cmemu.outputs.rst  py21cmemu.properties.rst
docs/tutorials/: 21cmFAST_lightcone(1).ipynb  21cmFAST_lightcone.ipynb  21cmFAST_tau_UVLFs.ipynb  Test_data_sample.npz  Tutorial_1.ipynb  Tutorial_2.ipynb  Tutorial_3.ipynb  basic_usage.ipynb  lightcone_example.npz  radio_emulator.ipynb  v3_full_emulator.ipynb
emu21cmfast/: __init__.py  emulator.py
src/emu21cmfast/: __init__.py  config.py  emulator.py  get_emulator.py
src/fast21cmemu/: __init__.py  emulator.py
src/py21cmemu/: __init__.py  config.py  emulator.py  emulator_constants.npz  get_emulator.py  inputs.py  model_utils.py  output.py  outputs.py  properties.py  sample_pytorch.py  sde.py  utils.py
src/py21cmemu/models/ACG/: __init__.py  convert_v1_to_pytorch.py  v1_pytorch.py
src/py21cmemu/models/MHs/: __init__.py  lstm_model.py  mh_emulator_constants.npz  score_model.py
src/py21cmemu/models/acg/: v1_model.py
src/py21cmemu/models/default/: convert_v1_to_pytorch.py  v1_model.py  v1_pytorch.py
src/py21cmemu/models/mcg/: __init__.py  lstm_emulator_constants.npz  lstm_model.py
src/py21cmemu/models/radio/: median_test_errors.npz  model.py
src/py21cmemu/models/radio_background/: model.py  radio_background_emu_csts.npz
src/py21cmemu/scripts/: __init__.py  convert_tf_to_pytorch.py
tests/: __init__.py  _socket_toggle.py  conftest.py  test_2d_ps.py  test_accuracy.py  test_cfg.py  test_emulator.py  test_get_emulator.py  test_inputs.py  test_main.py  test_outputs.py  test_properties.py  test_v3.py
