[project]
name = "py21cmEMU"
dynamic = ["version"]
description = "Emulator of 21cmFAST summaries."
authors = [
    { name = "Daniela Breitman", email = "daniela.breitman@sns.it" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "Epoch of Reionization",
    "Cosmology",
]
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.10.1",
    "torch>=1.9.0",
    "einops>=0.6.0",
    "appdirs>=1.4.4",
    "toml>=0.10.2",
    "GitPython>=3.1.31",
    "astropy>=5.0",
]

[dependency-groups]
test = [
    "coverage[toml]>=6.2",
    "h5py>=3.8.0",
    "Pygments>=2.10.0",
    "pytest>=6.2.5",
    "pytest-socket",
    "typeguard>=2.13.3",
    "xdoctest[colors]>=0.15.10",
]
docs = [
    "furo>=2021.11.12",
    "ipython>=7.0.0",
    "myst-parser>=0.16.1",
    "nbsphinx>=0.9.0",
    "sphinx>=4.3.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-click>=3.0.2",
]
dev = [
    "mypy>=0.930",
    "pre-commit>=2.16.0",
    "pre-commit-hooks>=4.1.0",
    "pytest-cov>=7.1.0",
    "pyupgrade>=2.29.1",
    "ruff>=0.15.11",
    { include-group = "test" },
    { include-group = "docs" },
]

[project.urls]
Homepage = "https://github.com/21cmFAST/21cmEMU"
Repository = "https://github.com/21cmFAST/21cmEMU"
Documentation = "https://21cmEMU.readthedocs.io"
Changelog = "https://github.com/21cmFAST/21cmEMU/releases"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/py21cmemu"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["py21cmemu"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C90",  # McCabe complexity
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "RUF002",  # ambiguous unicode in docstrings (legitimate math: ×, –)
    "RUF003",  # ambiguous unicode in comments  (legitimate math: ×, –)
    "C901",    # function complexity (inherently complex model/loader functions)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "main_only: marks tests to only run on merge to main",
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]  # Allow imports after matplotlib setup in notebooks
"tests/*" = ["B"]     # Relax bugbear in tests
"src/py21cmemu/models/ACG/convert_v1_to_pytorch.py" = ["ALL"]  # bookkeeping script, not part of the package
